# code-lab

./: .editorconfig  .gitignore  LICENSE  README.md  remove_tools.sh  setup_tools.sh  tools.sh
bash/: bash.md  justfile
bash/0_vs_BASH_SOURCE/: try_0.sh  try_0_nested.sh  try_bash_source.sh  try_bash_source_nested.sh  try_script_path.sh  try_script_path_nested.sh
bash/ansi/: ansi.sh  try_ansi.sh
bash/args_builtin/: args_builtin.sh  args_builtin_last_cmd.sh  try_args_builtin.sh  try_args_builtin_last_cmd.sh
bash/args_positional/: args_positional.sh  try_args_positional.sh
bash/array/: try_array_access.sh  try_array_iteration.sh  try_array_modification.sh  try_array_with_functions.sh
dev/: dev.md
docs/: setup_on_macos.md  tools_management_script.md
python/: .gitignore  justfile  pyproject.toml  python.md  run_tests.sh
python/_TODO_hello_world_lib/: hello_world_lib.py  help_on_module_via_pydoc3.sh
python/ansi/: test_ansi.py
python/format/: ansi.py  format.py  run_test_functions.sh  run_tests.sh  test_ansi.py  try_format.py
python/hello_world/: __main__.py  hello_world.py  help_on_module_via_import.py  help_on_module_via_import.sh  help_on_module_via_pydoc3.sh  try_hello_world.py  try_hello_world_py.sh
python/hello_world_lib/: __main__.py  hello_world_lib.py  help_on_function_via_import.py  help_on_function_via_import.sh  help_on_module_via_import.py  help_on_module_via_import.sh  help_on_module_via_pydoc3.sh  try_hello_world_lib_py.py  try_hello_world_lib_py.sh
python/tools/: python_tools.sh  remove_python_tools.sh  setup_python_tools.sh
(+48 files in other folders)
